--- a/tmux.conf
+++ b/tmux.conf
@@ -2,3 +2,5 @@ set-option -g mouse on
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+set -g display-panes-time 2000
