fix scrollback keybindings...

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,14 @@
 set-option -g mouse on
+
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set -g display-panes-time 2000
+set -g display-panes-time 1000
+set -g history-limit 50000
+
+# Use v to trigger selection    
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# Use y to yank current selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
