tmux source file

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,3 +12,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # Use y to yank current selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+unbind-key -T copy-mode    MouseDragEnd1Pane
+unbind-key -T root    MouseDragEnd1Pane
