--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+set -g default-terminal "screen-256color"
+
 set -g display-panes-time 1000
 set -g history-limit 50000
 
