--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,7 +1,12 @@
 window:
-   opacity: 0.9
+   opacity: 0.85
    dimensions:
      columns: 500 
      lines: 300
 font:
   size: 12.0
+env:
+  TERM: xterm-256color
+key_bindings:
+    - { key: F,  mods: Alt,           chars: "\x1bf"                       }
+    - { key: B,  mods: Alt,           chars: "\x1bb"                       }
