add pane bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,11 @@ set-option -g mouse on
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 
 set -g default-terminal "screen-256color"
 
